--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
+    "@cosmjs/encoding": "^0.30.1",
     "@cosmjs/faucet-client": "^0.29.5",
     "@cosmjs/launchpad": "^0.27.1",
     "@cosmjs/proto-signing": "^0.29.5",
@@ -18,12 +19,14 @@
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
+    "chain-registry": "^1.10.0",
     "crypto-browserify": "^3.12.0",
     "json-format-highlight": "^1.0.4",
     "path-browserify": "^1.0.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.2.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
