--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cosmjs/amino": "^0.30.1",
     "@cosmjs/cosmwasm-stargate": "^0.29.5",
     "@cosmjs/encoding": "^0.30.1",
     "@cosmjs/faucet-client": "^0.29.5",
     "@cosmjs/launchpad": "^0.27.1",
-    "@cosmjs/proto-signing": "^0.29.5",
+    "@cosmjs/proto-signing": "^0.30.1",
     "@cosmjs/tendermint-rpc": "^0.29.5",
+    "@keplr-wallet/cosmos": "^0.11.56",
     "@reduxjs/toolkit": "^1.7.2",
     "@shoelace-style/shoelace": "^2.0.0-beta.64",
     "@testing-library/jest-dom": "^4.2.4",
@@ -20,6 +22,7 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "chain-registry": "^1.10.0",
+    "cosmjs-types": "^0.7.2",
     "crypto-browserify": "^3.12.0",
     "json-format-highlight": "^1.0.4",
     "path-browserify": "^1.0.1",
@@ -30,6 +33,7 @@
     "react-dom": "^17.0.2",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "react-simple-code-editor": "^0.11.0",
     "redux-persist": "^6.0.0",
