--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.0",
     "react-simple-code-editor": "^0.11.0",
+    "react-tooltip": "^5.11.1",
     "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
     "typescript": "~4.1.5"
